# job-finder

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.omx/plans/: prd-job-search-agentic-app-2026-03-17.md  test-spec-job-search-agentic-app-2026-03-17.md
airflow/: Dockerfile  airflow.cfg
airflow/dags/: job_ingestion_dag.py
src/jobsearch_agent/: __init__.py  cli.py  config.py  models.py  state.py
src/jobsearch_agent/agents/: __init__.py  analysis_agent.py  export_agent.py  hybrid_search_agent.py  query_builder_agent.py  query_understanding_agent.py  retrieve_agent.py
src/jobsearch_agent/db/: base.py  postgres_store.py  query_builder.py  schema.sql
src/jobsearch_agent/export/: csv_writer.py
src/jobsearch_agent/ingestion/: __init__.py  discovery.py  embed.py  fetch_extract.py  normalize.py  persist.py
src/jobsearch_agent/pipelines/: search_graph.py
src/jobsearch_agent/sources/: base.py  remoteok.py  tavily_discovery.py
tests/integration/: test_airflow_ingestion_flow.py  test_partial_failure.py  test_search_pipeline.py  test_tavily_discovery.py
tests/unit/: test_airflow_dag_structure.py  test_dedup.py  test_hybrid_ranking.py  test_models.py  test_query_builder.py  test_recency.py
